Feat: Set layout(1)

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "bulbu-admin": "file:",
     "next": "15.1.7",
     "react": "^19.0.0",
